--- a/src/app/heroes/heroe/heroe.component.html
+++ b/src/app/heroes/heroe/heroe.component.html
@@ -14,5 +14,5 @@
 
 
 </dl>
-<button>Cambiar heroe</button>
-<button>Cambiar edad</button>
+<button (click)='cambiarNombre()' >Cambiar heroe</button>
+<button (click)='cambiarEdad()'>Cambiar edad</button>
