--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -2,18 +2,14 @@
 <hr>
 
 <div class ="row">
-    <div class = "col">
-        <h3>Personajes</h3>
-        <hr>
-        <ul>
-            <li>Krillin - 700</li>
-            <li>Goku - 800</li>
-            <li>Vegeta - 8500</li>
-        </ul>
+    
+    <div class="col">
+        <app-personajes [personajes]="personajes"></app-personajes>
     </div>
     <div class="col"> 
         <h3>Agregar <small>{{nuevo.nombre}}</small></h3>
         <hr>
+       
         <form (ngSubmit)="agregar()">
             <input 
                 type="text" 
@@ -26,7 +22,8 @@
             <input 
                 type="number" 
                 placeholder="Poder"
-                [value] = "nuevo.poder"
+                name="poder"
+                [(ngModel)] = "nuevo.poder"
                 />
             <button type = "submit">Agregar</button>
         </form>
