--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -7,26 +7,12 @@
         <app-personajes [personajes]="personajes"></app-personajes>
     </div>
     <div class="col"> 
-        <h3>Agregar <small>{{nuevo.nombre}}</small></h3>
-        <hr>
-       
-        <form (ngSubmit)="agregar()">
-            <input 
-                type="text" 
-                placeholder="Nombre "
-                name="nombre"
-                [(ngModel)]="nuevo.nombre"
-                />
-                   <!-- [value]="nuevo.nombre"
-                (input)="cambiarNombre($event)" -->
-            <input 
-                type="number" 
-                placeholder="Poder"
-                name="poder"
-                [(ngModel)] = "nuevo.poder"
-                />
-            <button type = "submit">Agregar</button>
-        </form>
+        <app-agregar 
+        [nuevo] = 'nuevo'
+        (onNuevoPersonajeCreado) ="agregarNuevoPersonaje( $event )"
+        >
+    </app-agregar>
+      
     </div>
 </div>
 
