--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -4,12 +4,11 @@
 <div class ="row">
     
     <div class="col">
-        <app-personajes [personajes]="personajes"></app-personajes>
+        <app-personajes></app-personajes>
     </div>
     <div class="col"> 
         <app-agregar 
         [nuevo] = 'nuevo'
-        (onNuevoPersonajeCreado) ="agregarNuevoPersonaje( $event )"
         >
     </app-agregar>
       
